syntax = "proto3";

message Unk {

}

message PacketHead {
	uint32 packet_id = 1;
	uint32 rpc_id = 2;
	uint32 client_sequence_id = 3;
	uint32 enet_channel_id = 4;
	uint32 enet_is_reliable = 5;
	uint64 sent_ms = 6;
	uint32 user_id = 11;
	uint32 user_ip = 12;
	uint32 user_session_id = 13;
	uint64 recv_time_ms = 21;
	uint32 rpc_begin_time_ms = 22;
	map<uint32, uint32> ext_map = 23;
	uint32 sender_app_id = 24;
	uint32 source_service = 31;
	uint32 target_service = 32;
	map<uint32, uint32> service_app_id_map = 33;
	bool is_set_game_thread = 34;
	uint32 game_thread_index = 35;
}

message CountDownDelete {
    map<uint32, uint32> delete_time_num_map = 1;
    uint32 config_count_down_time = 2;
}

message DateTimeDelete {
    uint32 delete_time = 1;
}

message DelayWeekCountDownDelete {
    map<uint32, uint32> delete_time_num_map = 1;
    uint32 config_delay_week = 2;
    uint32 config_count_down_time = 3;
}

message MaterialDeleteInfo {
    bool delete_time_num_map = 1;
    oneof delete_info {
        CountDownDelete count_down_delete = 2;
        DateTimeDelete date_delete = 3;
        DelayWeekCountDownDelete delay_week_count_down_delete = 4;
    }
}

message Material {
    uint32 count = 1;
    MaterialDeleteInfo delete_info = 2;
}

message Reliquary {
    uint32 level = 1;
    uint32 exp = 2;
    uint32 promote_level = 3;
    uint32 main_prop_id = 4;
    repeated uint32 append_prop_id_list = 5;
    bool starred = 6;
    repeated uint32 elixer_choices = 7;
    repeated uint32 unactivated_prop_id_list = 8;
}

message Weapon {
    uint32 level = 1;
    uint32 exp = 2;
    uint32 promote_level = 3;
    map<uint32, uint32> affix_map = 4;
    bool unknown_field = 5;
}

message Equip {
    bool is_locked = 3;
    oneof detail {
        Reliquary reliquary = 1;
        Weapon weapon = 2;
    }
}

message Furniture {
    uint32 count = 1;
}

message Item {
    uint32 item_id = 1;
    uint64 guid = 2;
    oneof detail {
        Material material = 5;
        Equip equip = 6;
        Furniture furniture = 7;
    }
}

message PacketWithItems {
	repeated Item items = 14;
}

message PropValue {
    uint32 type = 1;
    int64 val = 4;
    oneof value {
        int64 ival = 2;
        float fval = 3;
    }
}

message AvatarSkillInfo {
    uint32 pass_cd_time = 1;
    repeated uint32 full_cd_time_list = 2;
    uint32 max_charge_count = 3;
}

message FetterData {
    uint32 fetter_id = 1;
    uint32 fetter_state = 2;
    repeated uint32 cond_index_list = 3;
}

message AvatarFetterInfo {
    uint32 exp_number = 1;
    uint32 exp_level = 2;
    repeated uint32 open_id_list = 3;
    repeated uint32 finish_id_list = 4;
    repeated uint32 rewarded_fetter_level_list = 5;
    repeated FetterData fetter_list = 6;
}

message AvatarInfo {
    uint32 avatar_id = 1;
    uint64 guid = 2;
    map<uint32, PropValue> prop_map = 3;
    uint32 life_state = 4;
    repeated uint64 equip_guid_list = 5;
    repeated uint32 talent_id_list = 6;
    map<uint32, float> fight_prop_map = 7;
    // TrialAvatarInfo trial_avatar_info = 9;
    map<uint32, AvatarSkillInfo> skill_map = 10;
    uint32 skill_depot_id = 11;
    AvatarFetterInfo fetter_info = 12;
    uint32 core_proud_skill_level = 13;
    repeated uint32 inherent_proud_skill_list = 14;
    map<uint32, uint32> skill_level_map = 15;
    // AvatarExpeditionState expedition_state = 16;
    map<uint32, uint32> proud_skill_extra_level_map = 17;
    bool is_focus = 18;
    uint32 avatar_type = 19;
    repeated uint32 team_resonance_list = 20;
    uint32 wearing_flycloak_id = 21;
    // repeated AvatarEquipAffixInfo equip_affix_list = 22;
    uint32 born_time = 23;
    repeated uint32 pending_promote_reward_list = 24;
    uint32 costume_id = 25;
    // AvatarExcelInfo excel_info = 26;
    uint32 anim_hash = 27;
    // JNHGJAIIMGJ PINDEGAFOAE = 28;
    //uint32 ABLFJPMKKDA = 29;
    //uint32 GCHGLANNHMC = 30;
    //uint32 KCINBOMOIGL = 31;
}


message AvatarTeam {
    string team_name = 6;
    repeated uint64 avatar_guid_list = 15;
}

message AvatarDataNotify {
    repeated AvatarInfo avatar_list = 1;
    //map<uint32, AvatarTeam> avatar_team_map = 14;
}
